[package]
name = "super-oxi-car"
version = "0.1.0"
edition = "2021"
authors = ["nicolas cesar sabbatini vrech"]

[dependencies]
bevy = "0.12"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


[profile.dev.package."*"]
opt-level = 3
